2019-02-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/monitor.c (MagickMonitorActive): Add new private function
	to test if a progress monitor is active.  Update all progress
	monitor code in loops to use this information, while also updating
	code to hopefully address concerns expressed by Hongxu Chen about
	data races on the graphicsmagick-bugs mailing list starting on
	February 6, 2019.

2019-02-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/mpc.c (ReadMPCImage): Tally directory length to avoid
	death by strlen().

	* coders/miff.c (ReadMIFFImage): Tally directory length to avoid
	death by strlen().  Fixes oss-fuzz 13190
	"graphicsmagick/coder_MIFF_fuzzer: Timeout in
	graphicsmagick_coder_MIFF_fuzzer". (Credit to OSS-Fuzz)

2019-02-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/svg.c (ReadSVGImage): Don't call xmlCleanupParser()
	in module code since this may cause other libxml users to fail.

	* coders/msl.c (ProcessMSLScript): Don't call xmlCleanupParser()
	in module code since this may cause other libxml users to fail.

	* magick/render.c (DrawDashPolygon): (DrawDashPolygon): Don't read
	beyond end of dash pattern array.  This is a second instance of
	issue identified by SourceForge issue #591.  Fixes oss-fuzz 13160
	"graphicsmagick/coder_MVG_fuzzer: Heap-buffer-overflow in
	DrawDashPolygon".  The earlier attempt to fix this problem today
	broke dash patterns entirely.  (Credit to OSS-Fuzz)

	* magick/annotate.c (RenderFreetype): Eliminate memory leak of
	GlyphInfo.image (type FT_Glyph) while rendering some FreeType
	fonts such as the one we use now in the Magick++ test suite.

2019-02-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/render.c (DrawDashPolygon): Avoid reading one beyond
	length of dash pattern array, which is terminated by value 0.0.
	Fixes SourceForge issue #591 "Heap buffer overflow in
	DrawDashPolygon when parsing SVG images".