@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020190223"
-#define public MagickPackageReleaseDate "snapshot-20190223"
+#define public MagickPackageVersionAddendum ".020190224"
+#define public MagickPackageReleaseDate "snapshot-20190224"
